# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rank-llm"
version = "0.25.7"
description = "A Package for reranking with LLMs (pointwise, pairwise, and listwise)"
readme = "README.md"
authors = [
    { name = "Sahel Sharifymoghaddam", email = "sahel.sharifymoghaddam@uwaterloo.ca" },
    { name = "Ronak Pradeep", email = "rpradeep@uwaterloo.ca" },
    { name = "Jimmy Lin", email = "jimmylin@uwaterloo.ca" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["prompt-decoder", "RankVicuna", "RankZephyr", "RankLLM", "information retrieval", "neural ranking", "LLM", "listwise", "pointwise", "FirstMistral"]
dynamic = ["dependencies"]
requires-python = ">= 3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
openai = [
    "openai>=1.23.6",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
]
genai = [
    "google-generativeai>=0.8.2",
    "python-dotenv>=1.0.1",
]
cloud = [
    "rank-llm[openai]",
    "rank-llm[genai]",
]
gemini = [
    "rank-llm[genai]",
]
local = [
    "torch>=2.4.0",
    "transformers>=4.40.1,<5",
]
vllm = [
    "openai>=1.23.6",
    "rank-llm[local]",
    "vllm>=0.4.0",
]
sglang = [
    "rank-llm[local]",
    "sglang[all]~=0.4.0"
]
tensorrt-llm = [
    "rank-llm[local]",
    "tensorrt-llm[all]>=0.14.0"
]
pyserini = [
    "faiss-cpu>=1.8.0",
    "pandas>=1.4.0",
    "pyserini==1.2.0"
]
server = [
    "fastmcp>=2.0,<3",
    "flask>=3.0.0",
    "rank-llm[local]",
    "rank-llm[openai]",
    "rank-llm[pyserini]",
    "rank-llm[vllm]",
]
training = [
    "rank-llm[local]",
    "accelerate>=0.34.2",
    "bitsandbytes>=0.44.1",
    "datasets>=3.0.1",
    "deepspeed>=0.15.1",
    "six>=1.16.0",
    "torch>=2.4.0",
    "numpy>=1.26.4"
]
all = [
    "rank-llm[cloud]",
    "rank-llm[local]",
    "rank-llm[pyserini]",
    "rank-llm[server]",
    "rank-llm[sglang]",
    "rank-llm[tensorrt-llm]",
    "rank-llm[training]",
    "rank-llm[vllm]",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/castorini/rank_llm"

[tool.bumpver]
current_version = "0.25.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"README.md" = [
    'current_version = "{version}"',
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "rank_llm",
    "rank_llm.analysis",
    "rank_llm.evaluation",
    "rank_llm.rerank",
    "rank_llm.rerank.*",
    "rank_llm.retrieve",
]
namespaces = false

[tool.setuptools.package-data]
"rank_llm.rerank.prompt_templates" = ["*.yaml"] 
