# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rank-llm"
version = "0.25.7"
description = "A Package for reranking with LLMs (pointwise, pairwise, and listwise)"
readme = "README.md"
authors = [
    { name = "Sahel Sharifymoghaddam", email = "sahel.sharifymoghaddam@uwaterloo.ca" },
    { name = "Ronak Pradeep", email = "rpradeep@uwaterloo.ca" },
    { name = "Jimmy Lin", email = "jimmylin@uwaterloo.ca" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["prompt-decoder", "RankVicuna", "RankZephyr", "RankLLM", "information retrieval", "neural ranking", "LLM", "listwise", "pointwise", "FirstMistral"]
dynamic = ["dependencies"]
requires-python = ">= 3.11"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
openai = [
    "openai>=1.23.6",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
]
genai = [
    "google-generativeai>=0.8.2",
    "python-dotenv>=1.0.1",
]
cloud = [
    "rank-llm[openai]",
    "rank-llm[genai]",
]
gemini = [
    "rank-llm[genai]",
]
local = [
    "torch>=2.4.0",
    "transformers>=4.40.1,<5",
]
vllm = [
    "openai>=1.23.6",
    "rank-llm[local]",
    "vllm>=0.4.0",
]
sglang = [
    "rank-llm[local]",
    "sglang[all]~=0.4.0"
]
tensorrt-llm = [
    "rank-llm[local]",
    "tensorrt-llm[all]>=0.14.0"
]
pyserini = [
    "faiss-cpu>=1.8.0",
    "pandas>=1.4.0",
    "pyserini==1.2.0"
]
api = [
    "fastapi>=0.115.0",
    "flask>=3.0.0",
    "uvicorn>=0.32.0",
]
mcp = [
    "fastmcp>=2.0,<3",
    "rank-llm[openai]",
    "rank-llm[pyserini]",
    "rank-llm[vllm]",
]
server = [
    "rank-llm[api]",
    "rank-llm[mcp]",
]
training = [
    "rank-llm[local]",
    "accelerate>=0.34.2",
    "bitsandbytes>=0.44.1",
    "datasets>=3.0.1",
    "deepspeed>=0.15.1",
    "six>=1.16.0",
    "torch>=2.4.0",
    "numpy>=1.26.4"
]
all = [
    "rank-llm[api]",
    "rank-llm[cloud]",
    "rank-llm[local]",
    "rank-llm[mcp]",
    "rank-llm[pyserini]",
    "rank-llm[server]",
    "rank-llm[sglang]",
    "rank-llm[tensorrt-llm]",
    "rank-llm[training]",
    "rank-llm[vllm]",
]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
    "ruff>=0.12.0",
    "types-PyYAML>=6.0.12.20250516",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]

[project.urls]
Homepage = "https://github.com/castorini/rank_llm"

[project.scripts]
rank-llm = "rank_llm.cli.main:main"

[tool.bumpver]
current_version = "0.25.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"README.md" = [
    'current_version = "{version}"',
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/rank_llm/analysis/response_analysis.py" = ["E402"]
"src/rank_llm/demo/*.py" = ["E402"]
"src/rank_llm/scripts/*.py" = ["E402"]

[tool.mypy]
files = [
    "src/rank_llm/api",
    "src/rank_llm/cli",
    "src/rank_llm/data.py",
    "src/rank_llm/_optional.py",
    "src/rank_llm/retrieve",
    "src/rank_llm/retrieve_and_rerank.py",
    "src/rank_llm/server/mcp",
    "test/retrieve/test_PyseriniRetriever.py",
    "test/server/test_mcp_server.py",
    "test/test_cli_http.py",
    "test/test_cli_mcp.py",
    "test/test_cli_operations.py",
]
explicit_package_bases = true
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "silent"
cache_dir = ".mypy_cache"
incremental = true

[[tool.mypy.overrides]]
module = [
    "pyserini",
    "pyserini.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "rank_llm",
    "rank_llm.analysis",
    "rank_llm.api",
    "rank_llm.cli",
    "rank_llm.evaluation",
    "rank_llm.rerank",
    "rank_llm.rerank.*",
    "rank_llm.retrieve",
    "rank_llm.scripts",
    "rank_llm.server",
    "rank_llm.server.*",
]
namespaces = false

[tool.setuptools.package-data]
"rank_llm.rerank.prompt_templates" = ["*.yaml"] 
